# webserv

./: -I  CMakeLists.txt  README.md  main.cpp  test.conf  webserv
cgi_handler/: CgiHandler.h  config.conf  test_cgi.cpp
client/: Client.h  ClientStatus.h
config_parser/: ConfigReader.cpp  ConfigReader.h  ConfigReader.hpp  Location.cpp  Location.h  Location.hpp  Server.cpp  Server.hpp  main.cpp  test.conf
exception/: AcceptException.h  BadListenerFdException.h  BadRequestException.h  BindException.h  CgiParamsNotSpecified.h  ExtensionNotSupported.h  FatalWebServException.h  FileNotFoundException.h  ListenException.h  MaxRequestSizeExceededException.h  MethodNotAllowed.h  NoSuchClientException.h  NonBlockException.h  PollException.h  ReadException.h  RuntimeWebServException.h  SelectException.h  SendException.h  WebServException.h
html/: 400.html  404.html  500.html  anima.html  index.html  some.html  yandex.html
html/cgi/: blacgi.bla  pycgi.py
html/hello/: index.html
html/test_directory/: 405.html  index.html  jscgi.js  testpost.html
logger/: Logger.h  StringBuilder.h
request/: HttpMethod.h  Method.h  Request.h  RequestStatus.h
response/: HttpStatus.h  HttpStatusWrapper.h  Response.h  Status.h
server/: Server.cpp  Server.h  ServerStruct.h
webserver/: WebServer.h
